<?xml version="1.0"?>
<package format="2">
  <name>mqtt_bridge</name>
  <version>0.1.0</version>
  <description>MQTT bridge for UAV control and status reporting</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>px_uav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>px_uav_msgs</exec_depend>
  <build_export_depend>px_uav_msgs</build_export_depend>

  <!-- Paho MQTT C++ Client Library -->
  <build_depend>libpaho-mqttpp3-dev</build_depend>
  <build_depend>libpaho-mqtt3-dev</build_depend>
</package>
  